[project]
name = "rl-project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.3.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "alembic==1.16.5",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.10.0",
    "anywidget==0.9.18",
    "appdirs==1.4.4",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arpeggio==2.0.3",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "async-lru==2.0.5",
    "attrs==23.2.0",
    "babel==2.17.0",
    "backrefs==5.9",
    "bbrl==1.0.1",
    "bbrl-algos>=0.0.2",
    "bbrl-gymnasium==1.0.0",
    "bbrl-utils==1.1.0",
    "beautifulsoup4==4.13.5",
    "bidict==0.23.1",
    "bitmath==1.3.3.1",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "blis==1.3.0",
    "bootstrapped==0.0.2",
    "box2d",
    "box2d-kengz==2.3.3",
    "box2d-py==2.3.5",
    "bs4==0.0.2",
    "cached-property==2.0.1",
    "catalogue==2.0.10",
    "cbor==1.0.0",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "cloudpathlib==0.22.0",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "comm==0.2.3",
    "confection==0.1.5",
    "conllu==6.0.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "cymem==2.0.11",
    "datamaestro==1.5.2",
    "datamaestro-image==2025.9.21.1",
    "datamaestro-text==2025.9.11",
    "datasets==4.1.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dill==0.4.0",
    "docstring-parser==0.17.0",
    "easypip==1.4.0",
    "einops==0.8.1",
    "etils==1.13.0",
    "executing==2.2.1",
    "experimaestro==1.12.0",
    "farama-notifications==0.0.4",
    "fasteners==0.20",
    "fastjsonschema==2.21.2",
    "filelock==3.19.1",
    "flask==3.1.2",
    "flask-socketio==5.5.1",
    "flatbuffers==25.2.10",
    "fonttools==4.60.0",
    "fqdn==1.5.1",
    "frozenlist==1.7.0",
    "fsspec==2025.9.0",
    "future==1.0.0",
    "gast==0.6.0",
    "gevent==25.9.1",
    "gevent-websocket==0.10.1",
    "ghp-import==2.1.0",
    "glfw==2.10.0",
    "google-pasta==0.2.0",
    "greenlet==3.2.4",
    "grpcio==1.75.0",
    "gym>=0.26.2",
    "gymnasium==1.2.0",
    "h11==0.16.0",
    "h5py==3.14.0",
    "hf-xet==1.1.10",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.35.0",
    "humanfriendly==10.0",
    "hydra-core==1.3.2",
    "idna==3.10",
    "ijson==3.4.0",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "importlib-resources==6.5.2",
    "inscriptis==2.6.0",
    "ipykernel==6.30.1",
    "ipympl>=0.9.7",
    "ipyreact==0.5.0",
    "ipython==9.5.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.7",
    "ir-datasets==0.5.11",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "json5==0.12.1",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter==1.1.1",
    "jupyter-client==8.6.3",
    "jupyter-console==6.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.7",
    "jupyterlab-celltagsclasses==0.5.1",
    "jupyterlab-empinken-extension==0.6.2",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.15",
    "keras==3.11.3",
    "kiwisolver==1.4.9",
    "langcodes==3.5.0",
    "language-data==1.3.0",
    "lark==1.2.2",
    "libclang==18.1.1",
    "lightning-utilities==0.15.2",
    "lxml==6.0.1",
    "lz4==4.4.4",
    "mako==1.3.10",
    "marisa-trie==1.3.1",
    "markdown==3.9",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib==3.10.6",
    "matplotlib-inline==0.1.7",
    "mazemdp==1.2.12",
    "mdurl==0.1.2",
    "mergedeep==1.3.4",
    "mistune==3.1.4",
    "mkdocs==1.6.1",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-material==9.6.20",
    "mkdocs-material-extensions==1.3.1",
    "ml-dtypes==0.5.3",
    "moviepy==2.2.1",
    "mpmath==1.3.0",
    "mujoco==3.3.6",
    "multidict==6.6.4",
    "multiprocess==0.70.16",
    "murmurhash==1.0.13",
    "namex==0.1.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "notebook==7.4.5",
    "notebook-shim==0.2.4",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvtx-cu12==12.8.90",
    "omegaconf==2.3.0",
    "opencv-python==4.12.0.88",
    "opt-einsum==3.4.0",
    "optree==0.17.0",
    "optuna==4.5.0",
    "overrides==7.7.0",
    "packaging==23.2",
    "paginate==0.5.7",
    "pandas==2.3.2",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "pip==25.2",
    "platformdirs==4.4.0",
    "plumbum==1.9.0",
    "preshed==3.0.10",
    "proglog==0.1.12",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.3.2",
    "protobuf==6.32.1",
    "psutil==7.1.0",
    "psygnal==0.14.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==21.0.0",
    "pycparser==2.23",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pygame==2.6.1",
    "pyglet==1.5.31",
    "pygments==2.19.2",
    "pymdown-extensions==10.16.1",
    "pyopengl==3.1.10",
    "pyparsing==3.2.5",
    "pystk2-gymnasium==0.7.2",
    "pysupertuxkart2==0.4.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-engineio==4.12.2",
    "python-json-logger==3.3.0",
    "python-socketio==5.13.0",
    "pytools==2023.1.1",
    "pytorch-lightning==2.5.5",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyyaml-env-tag==1.1",
    "pyzmq==27.1.0",
    "referencing==0.36.2",
    "regex==2025.9.18",
    "requests==2.32.5",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rich==14.1.0",
    "rpds-py==0.27.1",
    "rpyc==6.0.2",
    "safetensors==0.6.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "seaborn==0.13.2",
    "send2trash==1.8.3",
    "sentencepiece==0.2.1",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "smart-open==7.3.1",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8",
    "spacy==3.8.7",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "sqlalchemy==2.0.43",
    "srsly==2.5.1",
    "stack-data==0.6.3",
    "su-master-mind==2025.9.21.6",
    "swig==4.3.1.post0",
    "sympy==1.14.0",
    "tbparse>=0.0.9",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.20.0",
    "termcolor==2.5.0",
    "terminado==0.18.1",
    "thinc==8.3.6",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "tokenizers==0.22.1",
    "torch==2.8.0",
    "torchdiffeq==0.2.5",
    "torchmetrics==1.8.2",
    "torchvision==0.23.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.56.2",
    "trec-car-tools==2.6",
    "triton==3.4.0",
    "typer==0.19.1",
    "types-python-dateutil==2.9.0.20250822",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "unlzw3==0.2.3",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "warc3-wet==0.2.5",
    "warc3-wet-clueweb09==0.2.5",
    "wasabi==1.1.3",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "weasel==0.4.1",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "widgetsnbextension==4.0.14",
    "wrapt==1.17.3",
    "wsproto==1.2.0",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zipp==3.23.0",
    "zlib-state==0.1.10",
    "zope-event==6.0",
    "zope-interface==8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "TID"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
force-single-line = false
